--- a/vue08-TS/vue-study-web20-ts/vue-study-web20-ts/tsconfig.json
+++ b/vue08-TS/vue-study-web20-ts/vue-study-web20-ts/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "esnext",
+    "module": "es2015",
     "strict": true,
+    "moduleResolution": "node",
     "jsx": "preserve",
     "importHelpers": true,
-    "moduleResolution": "node",
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
