--- a/vue08-TS/vuejstsdemo/package.json
+++ b/vue08-TS/vuejstsdemo/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -28,7 +29,8 @@
     "html-webpack-plugin": "^4.3.0",
     "sass-loader": "^9.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex-module-decorators": "^0.17.0"
   },
   "eslintConfig": {
     "root": true,
